# diffusion_policy_realman

./: .gitignore  analyze_replay_error.py  build-constraints.txt  demo_real_robot.py  demo_real_robot_iphone.py  eval_real_robot.py  hello.py  iphone_mcap_replay.py  iphone_replay.py  mcap_pose_loader.py  pyproject.toml  replay_listener.py
demo_data/replay_buffer.zarr/meta/episode_ends/: .zarray
diffusion_policy/common/: sampler.py
diffusion_policy/env/block_pushing/: block_pushing.py  block_pushing_discontinuous.py  block_pushing_multimodal.py
diffusion_policy/env/kitchen/: __init__.py  kitchen_lowdim_wrapper.py
diffusion_policy/env/kitchen/relay_policy_learning/adept_envs/adept_envs/: mujoco_env.py
diffusion_policy/env/kitchen/relay_policy_learning/adept_envs/adept_envs/franka/: kitchen_multitask_v0.py
diffusion_policy/env/kitchen/relay_policy_learning/adept_envs/adept_envs/utils/: parse_demos.py
diffusion_policy/env/pusht/: pusht_env.py
diffusion_policy/env/robomimic/: robomimic_image_wrapper.py  robomimic_lowdim_wrapper.py
diffusion_policy/env_runner/: blockpush_lowdim_runner.py  kitchen_lowdim_runner.py
diffusion_policy/gym_util/: async_vector_env.py
diffusion_policy/real_world/: iphone_arkit_receiver.py  iphone_arkit_tcp_receiver.py  iphone_zmq_receiver.py  keystroke_counter.py  multi_realsense.py  real_env.py  realman_interpolation_controller.py
diffusion_policy/shared_memory/: shared_memory_util.py
replay_logs/: run_001.npz  run_001_error.csv
tests/: test_block_pushing.py  test_mcap_pose_loader.py
